--- a/style.css
+++ b/style.css
@@ -21,6 +21,13 @@ body{
 	text-align: center;
 }
 
+img {
+	width: 6rem;
+	height: 6rem;
+	margin-left: 25rem ;
+
+}
+
 .container h1{
 	font-size: 5rem;
 	color: white;
@@ -40,9 +47,9 @@ body{
 	width: 20rem;
 	height: 22rem;
 	float: left;
-	margin: 2rem 15rem;
+	margin: 6rem 15rem;
 	border-radius: 1rem;
-	background-color: #008080;
+	background-color: white;
 }
 
  h1{
@@ -52,8 +59,12 @@ body{
 .container3{
 	width: 20rem;
 	height: 22rem;
-	float: right;
-	margin: 2rem 6rem;
+	float: left;
+	margin-top: 6rem;
 	border-radius: 1rem;
-	background-color: #008080;
+	background-color: white;
+}
+
+.container2 h1{
+	margin-top: 1.3rem;
 }
