--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
 	margin: 0;
-	padding: 0;	
+	padding: 0;
+	font-family: "Budokan Rounded"  sans-serif;;	
 }
 
 html,body{
@@ -67,4 +68,16 @@ img {
 
 .container2 h1{
 	margin-top: 1.3rem;
+}
+
+.descrisao{
+	margin: 3rem 25rem;
+	width: 35rem ;
+	height: 25rem;
+	background-color: white;
+	border-radius: 1rem;
+}
+
+.descrisao h1{
+	padding-top: 2rem;
 }
