--- a/style.css
+++ b/style.css
@@ -26,7 +26,50 @@ img {
 	width: 6rem;
 	height: 6rem;
 	margin-left: 25rem ;
+}
 
+.icon{
+	display: flex;
+	column-gap: 25px;
+}
+
+.icons{
+	width: 60px;
+	height: 60px;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	text-decoration: none;
+	font-size: 26px;
+	color: #fff;
+	border-radius: 50%;
+	outline: 2px solid #fff;
+	transition-property: outline-offset, outline, background-color;
+	transition-duration: .25s;
+}
+
+.icons:hover{
+	outline-offset: 4px;
+}
+
+.icons:hover i{
+	animation: shake .25s;
+}
+
+.icon--Linkedln:hover{
+	background-image: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5% 
+	#fd5949 45%, #d6249f 60%, #285AEB 90%);
+	outline-color: #a02d76;	
+}
+
+.icon--Linkedln:hover{
+	background-color: #0077b5;
+	outline-color: #0077b5;
+}
+
+.icon--github:hover{
+	background-color: #2ea44f;
+	outline-color: #2ea44f;
 }
 
 .container h1{
@@ -80,4 +123,10 @@ img {
 
 .descrisao h1{
 	padding-top: 2rem;
+}
+
+@keyframes shake {
+	10%{transform: rotate(15deg);}
+	20%{transform: rotate(-15deg);}
+
 }
