--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 html,body{
 	height: 100%;
+	width: 100%;
 }
 
 body{
@@ -21,29 +22,15 @@ body{
 	text-align: center;
 }
 
-.icon{
-	width: 300px;
-	height: 10rem;
-	margin:0 2.5rem;
-	display: inline-flex;
-
-}
-
-.icon a img{
-	width: 4rem;
-	height: 4rem;
-	margin-left: 400px;
-
-}
-
-
-
 .container h1{
+	text-align: center;
 	font-size: 5rem;
 	color: white;
 }
 
+
 .container h2{
+	text-align: center;
 	font-size: 3rem;
 	color: #6A5ACD;
 }
@@ -52,6 +39,22 @@ body{
 	font-size: 1.7rem;
 	color: wheat;
 }
+
+.container-icon {
+	display: inline-flex;
+	width: 18%;
+	height: 20%;
+	margin: 5% 40% 2%;
+
+}
+
+.container-icon img{
+ 	marin-top: 1%;
+ 	padding: 1.3rem;
+	width: 5rem;
+	height: 5rem;
+}
+
 
 .container2{
 	margin: 6rem 33rem;
@@ -63,7 +66,7 @@ body{
 	margin-top: 1rem;
 	width: 3rem;
 	height: 3rem;
-	margin-left: 7.8rem;
+	margin-left: 6.3rem;
 	color: #6A5ACD;
 }
 
@@ -85,10 +88,11 @@ p{
 }
 
 .container3 img{
+	position: relative;
 	margin-top: 1rem;
 	width: 3rem;
 	height: 3rem;
-	margin-left: 7.8rem;
+	margin-left: 6.3rem;
 }
 
 
@@ -101,3 +105,27 @@ p{
 	padding-top: 2rem;
 }
 
+@media screen and (max-width: 1150px){
+
+	.container h1{
+		max-width: none;
+		text-align: center;
+		
+	}
+
+	.container h2{
+		max-width: none;
+	}
+
+	.container-icon {
+		max-width:none;
+		display: flex;
+
+	}
+
+	.container-icon img{
+		position: static;
+	 	max-width: none;
+	 	align-items: center;
+	}
+}
