--- a/style.css
+++ b/style.css
@@ -1,131 +1,117 @@
-*{
-	margin: 0;
-	padding: 0;
-	font-family: 'Roboto Slab', serif;
-
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto Slab", serif;
 }
 
-html,body{
-	height: 100%;
-	width: 100%;
+body {
+  height: 100%;
+  width: 100%;
+  background-image: linear-gradient(#1e130c, #9a8478);
 }
 
-body{
-	background-color: #1C1C1C;
+.container {
+  width: 100%;
+  height: 40%;
+  text-align: center;
 }
 
-
-
-.container{
-	width:100%;
-	height: 40%;
-	text-align: center;
+.container h1 {
+  text-align: center;
+  font-size: 5rem;
+  color: white;
 }
 
-.container h1{
-	text-align: center;
-	font-size: 5rem;
-	color: white;
+.container h2 {
+  text-align: center;
+  font-size: 3rem;
+  color: #6a5acd;
 }
 
-
-.container h2{
-	text-align: center;
-	font-size: 3rem;
-	color: #6A5ACD;
-}
-
-.container p{
-	font-size: 1.7rem;
-	color: wheat;
+.container p {
+  font-size: 1.7rem;
+  color: wheat;
 }
 
 .container-icon {
-	display: inline-flex;
-	width: 18%;
-	height: 20%;
-	margin: 5% 40% 2%;
-
+  display: flex;
+  width: 5rem;
+  height: 5rem;
+  margin: 2rem 40rem 2rem;
 }
 
-.container-icon img{
- 	marin-top: 1%;
- 	padding: 1.3rem;
-	width: 5rem;
-	height: 5rem;
+.container-icon img {
+  margin-top: auto;
+  padding: 1.3rem;
+  width: 5rem;
+  height: 5rem;
 }
 
-
-.container2{
-	margin: 6rem 33rem;
-	border-radius: 1rem;
-	
+.container2 {
+  margin: 6rem 39rem;
+  border-radius: 1rem;
 }
 
-.container2 img{
-	margin-top: 1rem;
-	width: 3rem;
-	height: 3rem;
-	margin-left: 6.3rem;
-	color: #6A5ACD;
+.container2 img {
+  margin-top: 1rem;
+  width: 3rem;
+  height: 3rem;
+  margin-left: 6.3rem;
+  color: #6a5acd;
 }
 
- h1{
-	text-align: center;
-	margin-top: 1.3rem;
-	color: white;
+h1 {
+  text-align: center;
+  margin-top: 1.3rem;
+  color: white;
 }
 
-p{
-	text-align: center;
-	margin-top: 1rem;
-	margin-top: 1.5rem;
-	color: white;
+p {
+  text-align: center;
+  margin-top: 1rem;
+  margin-top: 1.5rem;
+  color: white;
 }
 
-.container3{
-	margin: 6rem 33rem;
+.container3 {
+  margin: 6rem 39rem;
 }
 
-.container3 img{
-	position: relative;
-	margin-top: 1rem;
-	width: 3rem;
-	height: 3rem;
-	margin-left: 6.3rem;
+.container3 img {
+  position: relative;
+  margin-top: 1rem;
+  width: 3rem;
+  height: 3rem;
+  margin-left: 6.8rem;
 }
 
-
-.descrisao{
-	margin: 3rem 25rem;
-	color: white;
+.descrisao {
+  margin: 3rem 25rem;
+  color: white;
 }
 
-.descrisao h1{
-	padding-top: 2rem;
+.descrisao h1 {
+  padding-top: 0.4rem;
 }
 
-@media screen and (max-width: 1150px){
+@media screen and (max-width: 1150px) {
+  .container h1 {
+    max-width: none;
+    text-align: center;
+  }
 
-	.container h1{
-		max-width: none;
-		text-align: center;
-		
-	}
+  .container h2 {
+    max-width: none;
+  }
 
-	.container h2{
-		max-width: none;
-	}
+  .container-icon {
+    max-width: none;
+    display: flex;
+  }
 
-	.container-icon {
-		max-width:none;
-		display: flex;
-
-	}
-
-	.container-icon img{
-		position: static;
-	 	max-width: none;
-	 	align-items: center;
-	}
+  .container-icon img {
+    position: static;
+    max-width: none;
+    align-items: center;
+  }
 }
